--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <body class="">
     <main class="testimonials-grid">
       <article
-        class="testimonial"
+        class="testimonial testimonial-grid-col-span-2"
         style="
           background-color: var(--color-purple-500);
           color: var(--color-white);
@@ -150,7 +150,7 @@
       </article>
 
       <article
-        class="testimonial"
+        class="testimonial testimonial-grid-col-span-2"
         style="background-color: var(--color-dark-blue)"
       >
         <div class="testimonial__profile">
